@@ -553,8 +553,20 @@ class tvshows:
             ('Paramount+', '531', 'https://i.imgur.com/RpfpI9w.png', providers.PARAMOUNT_ENABLED)
         ]
 
-        for i in services:
-            if i[3]:
+        services = [s for s in services if s[3]]
+        if services:
+
+            if len(services) > 1:
+                self.list.append(
+                    {
+                        'name': 'Popular on My Services (mixed)',
+                        'url': self.tmdb_providers_link % '|'.join([i[1] for i in services]),
+                        'image': 'featured.png',
+                        'plot': '[I]Provided by JustWatch[/I]',
+                        'action': 'tvshows'
+                        })
+
+            for i in services:
                 self.list.append(
                     {
                         'name': i[0],
@@ -563,7 +575,8 @@ class tvshows:
                         'plot': '[I]Provided by JustWatch[/I]',
                         'action': 'tvshows'
                     })
-        self.addDirectory(self.list)
+
+            self.addDirectory(self.list)
         return self.list
 
 
